bindings/cpp/eat.hpp

    void
    stop(
        void
        );
    typedef struct Arena Arena;
    struct Destructor{
        eau_destructor* destructor;
        Arena* arena;
    };
    struct Arena{
        eau_arena* arena;

        Arena();
        ~Arena();

        void
        clear(
            void
            );

        void
        add(
            Arena* arena,
            Destructor* user_dest,
            void* data,
            void (*delete_fn)(void* data)
            );
    };
    typedef struct Mixer Mixer;
    struct MixerDesc{
        float volume = 1;
        float pitch = 1;

        Mixer* parent = nullptr;
    };
    struct Mixer{
        eaa_mixer* mixer;
        eau::Arena* arena;

        Mixer(
            MixerDesc desc,
            eau::Arena* arena = nullptr
            );
        ~Mixer();

        void
        set_volume(
            float volume
            );

        void
        set_pitch(
            float pitch
            );
    };
    struct SoundDesc{
        float volume = 1;
        float pitch = 1;
        bool loop = false;

        Mixer* mixer = nullptr;
    };
    struct Sound{
        eaa_sound* sound;
        eau::Arena* arena;

        Sound(
            SoundDesc desc,
            const char* data, size_t data_size,
            eau::Arena* arena = nullptr
            );
        ~Sound();

        void
        play(
            void
            );

        void
        stop(
            void
            );

        void
        set_volume(
            float volume
            );
        
        void
        set_pitch(
            float pitch
            );

        void
        set_loop(
            bool loop
            );
    };